--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <style>
+body {
+background-color: blue;
+color: white;
+font-size: 32px;
+font-family: Arial, Helvetica, sans-serif;
+}
 </style>
 </head>
 <body>
