--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
+  
 <style>
 body {
-background-color: blue;
+background-color: black;
 color: white;
 font-size: 32px;
 font-family: Arial, Helvetica, sans-serif;
@@ -10,6 +11,15 @@ font-family: Arial, Helvetica, sans-serif;
 </style>
 </head>
 <body>
-[some more text]
+  <table>
+    <tr>
+      <th>
+Hello!!! This is a weird and relaxing(stupid) make up game!
+ <img src="https://wzhu24rochester.github.io/twine/image/hello.PNG">
+        <br><br>
+Click start whenever you're ready!
+           </th>
+           </tr>
+           </table>
 </body>
 </html>
