--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 body {
 background-color: black;
 color: white;
-font-size: 32px;
+font-size: 25px;
 font-family: Arial, Helvetica, sans-serif;
 }
 </style>
@@ -18,7 +18,8 @@ font-family: Arial, Helvetica, sans-serif;
  <img src="https://wzhu24rochester.github.io/twine/image/hello.PNG">
         <br><br>
 Hello!!! This is a weird and relaxing(stupid) make up game!
-Click start whenever you're ready!
+Click a href="https://wzhu24rochester.github.io/twine/makeupgamefin.html">start</a> whenever you're ready!
+        
            </th>
            </tr>
            </table>
