--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@ font-family: Arial, Helvetica, sans-serif;
   <table>
     <tr>
       <th>
-
  <img src="https://wzhu24rochester.github.io/twine/image/hello.PNG">
         <br><br>
 Hello!!! This is a weird and relaxing(stupid) make up game!
-Click a href="https://wzhu24rochester.github.io/twine/makeupgamefin.html">start</a> whenever you're ready!
+Click <a href="https://wzhu24rochester.github.io/twine/makeupgamefin.html">start</a> whenever you're ready!
         
-           </th>
-           </tr>
-           </table>
+         </th>
+       </tr>
+   </table>
 </body>
 </html>
