--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@ font-family: Arial, Helvetica, sans-serif;
 </style>
 </head>
 <body>
-  <table>
-    <tr>
-      <th>
+  <center>
                               <img src="https://wzhu24rochester.github.io/twine/image/hello.PNG">
         <br><br>
                                         Hello!!! This is a weird and relaxing(stupid) make up game!
                           Click <a href="https://wzhu24rochester.github.io/twine/makeupgamefin.html">start</a> whenever you're ready!
         
-         </th>
-       </tr>
-   </table>
+  </center>
 </body>
 </html>
