--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-family: Arial, Helvetica, sans-serif;
                               <img src="https://wzhu24rochester.github.io/twine/image/hello.PNG">
         <br><br>
                                         Hello!!! This is a weird and relaxing(stupid) make up game!
-                          Click <a href="https://wzhu24rochester.github.io/twine/makeupgamefin.html">start</a> whenever you're ready!
+                          Click <a href="https://wzhu24rochester.github.io/twine/makeupgame.html">start</a> whenever you're ready!
         
   </center>
 </body>
